<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 Felix Bechstein -->
<!--
                This file is part of WebSMS. This program is free software; you can 
                redistribute it and/or modify it under the terms of the GNU General 
                Public License as published by the Free Software Foundation; either 
                version 3 of the License, or (at your option) any later version. 
-->
<!--
                This program is distributed in the hope that it will be useful, but 
                WITHOUT ANY WARRANTY; without even the implied warranty of 
                MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
                General Public License for more details. You should have received a 
                copy of the GNU General Public License along with this program; If 
                not, see <http://www.gnu.org/licenses/>. 
-->
<resources>

    <string name="app_name" translatable="false">WebSMS Connector: smsflatrate.net</string>
    <string name="app_version" translatable="false">1.2</string>
    <string name="connector_author" translatable="false">Felix Bechstein &lt;f@ub0r.de></string>
    <string name="connector_name" translatable="false">smsflatrate.net</string>
    <string name="connector_preferences">Preferences - smsflatrate.net</string>
    <string name="connector_enable">Enable smsflatrate.net</string>
    <string name="connector_create_account_hint">Create new smsflatrate.net account</string>
    <string name="connector_create_account_url" translatable="false">http://smsflatrate.net/</string>
    <string name="connector_appkey">AppKey</string>
    <string name="connector_appkey_help_title">AppKey Help</string>
    <string name="connector_appkey_help">You need an account on smsflatrate.net, please register. Go to the user login on the menu item "Appkey” an use the following license number: 217075044 to generate your own Appkey. Set this Appkey in your app in the menue "Settings"- done!</string>
    <string name="connector_support" translatable="false">Support</string>
    <string name="connector_support_hint" translatable="false">Kloppe Media\nsmsflatrate.net\nPostfach 1444\n91536 Rothenburg\nGERMANY\n\nWeb: www.smsflatrate.net\nMail: service@smsflatrate.net\n\nSpecial thanks to Felix Bechstein, WebSMS</string>
    <string name="connector_subconnectors">SubConnectors</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="connector_gw1_name">(1) DE, with sender id</string>
    <string name="connector_gw2_name">(2) INT, with sender id</string>
    <string name="connector_gw3_name">(3) DE, w/o sender id</string>
    <string name="connector_gw4_name">(4) INT, w/o sender id</string>
    <string name="connector_gw10_name">(10) High Quality DE, with sender id</string>
    <string name="connector_gw11_name">(11) High Quality INT, with sender id</string>
    <string name="connector_gw20_name">(20) Smart DE, w/o sender id</string>
    <string name="connector_gw21_name">(21) Smart INT, w/o sender id</string>
    <string name="connector_gw30_name">(30) Text2Speech call</string>
    <string name="speekers_summary">Choose Gateway 30 for Text2Speech calls. Your text message gets read out on the phone. Choose language here.</string>
    <string name="connector_error_110">Invalid gateway key or your account is locked</string>
    <string name="connector_error_140">Invalid AppKey</string>
    <string name="connector_error_150">You have tried to send to an international phone number through a gateway determined to handle german receivers only. Please use an international Gateway-Type.</string>
    <string name="connector_error_404">Unknown error. Please urgently contact support (service@smsflatrate.net).</string>

    <string-array name="speakers_entries" translatable="false">
        <item>Stefan (DE)</item>
        <item>Katrin (DE)</item>
        <item>Dave (U.S. EN)</item>
        <item>Susan (U.S. EN)</item>
        <item>Simon (EN)</item>
        <item>Kate (EN)</item>
        <item>Bernard (FR)</item>
        <item>Florence (FR)</item>
        <item>Luca (IT)</item>
        <item>Paola (IT)</item>
    </string-array>
    <string-array name="speakers_values" translatable="false">
        <item>Stefan</item>
        <item>Katrin</item>
        <item>Dave</item>
        <item>Susan</item>
        <item>Simon</item>
        <item>Kate</item>
        <item>Bernard</item>
        <item>Florence</item>
        <item>Luca</item>
        <item>Paola</item>
    </string-array>

</resources>